<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>thruster_allocation_matrix_controller</name>
  <version>0.0.2</version>
  <description>Thruster allocation matrix controller used to convert wrench commands into thrust commands</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Everardo Gonzalez</author>
  <author>Rakesh Vivekanandan</author>
  <author>Colin Mitchell</author>
  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>generate_parameter_library</depend>
  <depend>control_msgs</depend>
  <depend>auv_control_msgs</depend>
  <depend>hydrodynamics</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
