<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>topic_sensors</name>
  <version>0.1.0</version>
  <description>Sensor plugins used to write ROS 2 messages to state interfaces</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Akshaya Agrawal</author>
  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>generate_parameter_library</depend>
  <depend>controller_common</depend>
  <depend>message_transforms</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
