<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velocity_controllers</name>
  <version>0.0.1</version>
  <description>A collection of velocity controllers for underwater vehicles</description>
  <maintainer email="evanp922@gmail.com">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>hardware_interface</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
