<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>whole_body_controllers</name>
  <version>0.3.1</version>
  <description>Whole-body controllers for underwater vehicle manipulator systems</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/auv_controllers.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/auv_controllers/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>generate_parameter_library</depend>
  <depend>control_msgs</depend>
  <depend>pinocchio</depend>
  <depend>nav_msgs</depend>
  <depend>message_transforms</depend>
  <depend>controller_common</depend>
  <depend>ik_solvers</depend>
  <depend>auv_control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
